# veyralock

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml  requirements.txt  veyralock_entry.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_note.md
.github/workflows/: tests.yml
scripts/: build_macos.sh  build_windows.ps1
tests/: test_cli_delete_original.py  test_cli_info.py  test_encrypt_decrypt.py  test_password_strength.py  test_tamper_detection.py  test_wrong_password.py
veyralock/: __init__.py  cli.py  crypto.py  fileformat.py  gui.py  password.py  utils.py
