[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veyralock"
version = "1.0.0"
description = "Secure cross-platform file encryption and decryption using AES-256-GCM and Argon2id."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "VeyraLock Contributors" }
]
keywords = ["security", "encryption", "aes-gcm", "argon2id", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security :: Cryptography",
]
dependencies = [
  "argon2-cffi>=23.1.0",
  "cryptography>=42.0.0",
  "PySide6>=6.7.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "pyinstaller>=6.0.0",
  "pytest>=8.0.0",
]

[project.scripts]
veyralock = "veyralock.cli:main"
veyralock-gui = "veyralock.gui:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["veyralock*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
